--- a/css/main.css
+++ b/css/main.css
@@ -113,20 +113,20 @@ h3{
 }
 
 /* Productos*/
-.side-productos{
+.container-productos{
     display: flex;
     justify-content: space-between;
     margin: 3rem 0;
     border-bottom: 1px solid #fff;
     align-items: center;
 }
-.side-productos .btn-verCategorias{
+.container-productos .btn-verCategorias{
     background-color: #474747;
     padding: 0 1rem;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
 }
-.side-productos .btn-verCategorias:hover{
+.container-productos .btn-verCategorias:hover{
     transform: scale(1.1);
 }
 
@@ -138,6 +138,59 @@ h3{
     display: flex;
     flex-direction: column;
     max-width: 22rem;
-    margin: 0 1rem;
+    margin: 0 1rem 3rem 1rem;
+
+}
+.card .descripcion{
+    margin-left: 1rem;
+}
+.card p{
+    margin:  0.5rem 0;
+}
+.card .nombre-producto{
+    transition: color .2s ease-out;
+}
+.card .nombre-producto:hover{
+    color: green;
 }
 
+/*Footer*/
+.container-footer{
+    display: flex;
+    flex-direction: column;
+    
+}
+.container-footer .info-footer{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #282828;
+    padding: 4rem 0;
+}
+.info-footer p{
+    margin: 0.5rem 0;
+}
+.info-footer a{
+    display: block;
+    font-size: 1.3rem;
+    color: #b1b1b1;
+    transform: color 0.2s ease-out;
+}
+.info-footer a:hover{
+    color: #fff;
+}
+
+.info-footer .redes-footer a{
+    display: inline-block;
+    font-size: 2.5rem;
+    margin: 0 0.5rem;
+}
+
+.container-footer .copyright{
+    background-color: #1d1d1d;
+}
+.container-footer .copyright p{
+    margin: 0.6rem 0;
+    font-size: 1.4rem;
+    text-align: center;
+    color: #b1b1b1;
+}
