--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ h3{
     display: inline-block;
     margin: 0;
 }
-/***************** Inicio **************************/
+/******************** Inicio **************************/
 
 /* Productos*/
 .container-productos{
@@ -203,7 +203,7 @@ h3{
     color: #b1b1b1;
 }
 
-/***************** Detalles *************/
+/************************* Detalles ***********************/
 .container-detalles{
     display: flex;
     justify-content: center;
@@ -289,7 +289,7 @@ h3{
     color: #aaa;
 }
 
-/*********** Categorias ***********/
+/**************** Categorias ********************/
 
 .container-categorias{
     display: flex;
@@ -315,7 +315,7 @@ h3{
     color: #c36;
 }
 
-/************ Carrito de compras***********/
+/***************** Carrito de compras****************/
 .container-carrito{
     display: flex;
     justify-content: space-between;
@@ -366,4 +366,27 @@ h3{
 
 .container-resumen a:hover{
     background-color: #1fce13;
+}
+
+/****************** Productos por Categoria ********************/
+.bg-categoria-producto{
+    background: rgb(194,123,24);
+background: linear-gradient(90deg, rgba(194,123,24,1) 0%, rgba(224,69,91,1) 0%, rgba(18,6,8,1) 100%);
+    display: flex;
+    justify-content: end;
+    height: 25rem;
+}
+.bg-categoria-producto .title-categoria-producto{
+    width: 50%;
+    line-height: 1.2;
+    padding-top: 4rem;
+}
+.title-categoria-producto p{
+    color: #ed537a;
+    margin:0;
+}
+.title-categoria-producto h1{
+    font-weight: 900;
+    font-size: 4.5rem;
+    margin: 0;
 }
