--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -31,7 +31,6 @@ a{
     color: #fff;
 }
 h2{
-    display: inline-block;
     margin: 0;
 }
 h3{
@@ -67,4 +66,31 @@ h3{
 
 .side-header .btn-out{
     margin: 0 2rem;
+}
+
+/* Navegacion */
+.container-main{
+}
+.container-main .navegacion{
+    background-color: #3b3b3b;
+    width: 25rem;
+    height: 100vh;
+    padding: 0 0.5rem;
+}
+.navegacion h2{
+    padding: 2rem 0;
+    border-bottom: 1px solid #fff;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.navegacion a{
+    font-size: 1.8rem;
+    display: block;
+    margin: 0.5rem 0;
+    padding: 0.8rem 3rem;
+    border-radius: 0.5rem;
+    transition: background-color 0.2s ease-out;
+}
+.navegacion a:hover{
+    background-color: #666666;
 }
