--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -43,6 +43,10 @@ h3{
     margin: 0 auto; /*Contenedor centrado*/
 }
 
+.swal2-popup {
+    font-size: 1.5rem !important;
+}
+
 /*Side header*/
 .side-header{
     background-color: #282828;
