pagina categorias-editar completamente funcional. Modelo categorias terminado

--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -238,3 +238,6 @@ input[type="submit"]{
 .contenedor-option  .contenedor-editar{
     display: flex;
 }
+form .imagen-actual{
+    width: 15rem;
+}
