--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,10 @@ h3{
     margin: 0 1rem 3rem 1rem;
 
 }
+.card img{
+    object-fit: cover;
+    height: 22rem;
+}
 .card .descripcion{
     margin-left: 1rem;
 }
@@ -218,7 +222,9 @@ h3{
     margin: 4rem 0;
 }
 .detalles img{
-    width: 70%;
+    width: 48rem;
+    object-fit: cover;
+    height: 48rem;
 }
 .detalles .detalles-producto{
     background-color: #101010;
@@ -312,6 +318,7 @@ h3{
     transition: all 0.2s ease-in-out;
 }
 .card-categoria img{
+    width: 18rem;
     object-fit: cover;
     height: 18rem;
 }
@@ -335,7 +342,9 @@ h3{
     padding-bottom: 2rem;
 }
 .container-lista .item-list img{
-    width: 20%;
+    width: 18rem;
+    object-fit: cover;
+    height: 18rem;
 }
 .item-list .item-detalle p{
     margin: 0.6rem 0;
