--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -96,19 +96,19 @@ main {
     justify-content: space-between;
     align-items: center;
 
-    margin: 0.5rem 0;
+    margin: 0;
     padding: 0.8rem 3rem;
     border-radius: 0.5rem;
     transition: background-color 0.2s ease-out;
 }
 .navegacion a:hover{
-    background-color: #a78aff;
+    background-color: #997def;
 }
 .active{
     background-color: #6841db;
 }
 .navegacion a i{
-    transition: transform 0.4s ease;
+    transition: transform 0.2s ease-in-out;
 }
 .rotate{
     transform: rotateZ(-90deg);
@@ -121,7 +121,7 @@ main {
 }
 .navegacion ul a{
     font-size: 1.5rem;
-    padding-left: 3.2rem;
+    padding-left: 3.7rem;
 }
 
 .navegacion .show{
