--- a/css/main.css
+++ b/css/main.css
@@ -497,8 +497,37 @@ input[type="submit"] {
 }
 
 /*FontAwesome*/
+.sombra {
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+}
+
 .swal2-popup {
     font-size: 1.5rem !important;
 }
 
+/*Notificaciones*/
+.notificacion{
+    position: fixed;
+    top: 6.5rem;
+    right: 1rem;
+    padding: 1rem 3rem;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+.visible{
+    opacity: 1;
+
+}
+/*Colores de la notificacion*/
+.correcto{
+    background-color: rgb(179, 241, 117);
+    color: green;
+}
+.error{
+    background-color: rgb(238, 148, 166);
+    color: rgb(163, 0, 33);
+}
 
