--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -301,3 +301,32 @@ form .imagen-actual{
     width: 15rem;
 }
 
+/*Notificaciones*/
+.sombra {
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+}
+
+.notificacion{
+    position: fixed;
+    top: 6.5rem;
+    right: 1rem;
+    padding: 1rem 3rem;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+.visible{
+    opacity: 1;
+
+}
+/*Colores de la notificacion*/
+.correcto{
+    background-color: rgb(179, 241, 117);
+    color: green;
+}
+.error{
+    background-color: rgb(238, 148, 166);
+    color: rgb(163, 0, 33);
+}
