Verificamos  si el ID enviado en la URL existe en la base de datos antes de mostrar los datos del producto (detalles.php  categoria-producto.php)

--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -19,6 +19,9 @@ img {
     max-width: 100%; /*Imagen responsiva*/
     width: 100%;
     display: inline-block;
+
+    -webkit-user-drag: none; /* Evita que las imagenes puedan ser arrastras*/
+    user-select: none; /* Evita que las imagenes puedan ser seleccionadas*/
 }
 ul {
     margin: 0; /*Elimina estacios en blaco innecesarios*/
